[gd_scene load_steps=4 format=3 uid="uid://crux3gmmos21c"]

[ext_resource type="PackedScene" uid="uid://hw6s2crnu56b" path="res://src/ui/interaction_timer.tscn" id="1_0ey7u"]
[ext_resource type="Script" uid="uid://c2tm25sdsuonb" path="res://src/level/heal_event.gd" id="1_q72mk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_q72mk"]
radius = 50.0

[node name="HealEvent" type="Node2D"]
script = ExtResource("1_q72mk")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="HealArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HealArea"]
shape = SubResource("CircleShape2D_q72mk")

[node name="InteractionTimer" parent="HealArea" instance=ExtResource("1_0ey7u")]
anchors_preset = 6
anchor_left = 1.0
anchor_right = 1.0
offset_left = -14.0
offset_top = -100.0
offset_bottom = -86.0
grow_horizontal = 0

[node name="Dialogue" type="Label" parent="."]
offset_left = -103.0
offset_top = -72.0
offset_right = 116.0
offset_bottom = -49.0
text = "Press 'E' to heal all friendlies"

[connection signal="body_entered" from="HealArea" to="." method="_on_heal_area_body_entered"]
[connection signal="body_exited" from="HealArea" to="." method="_on_heal_area_body_exited"]
[connection signal="on_time_timeout" from="HealArea/InteractionTimer" to="." method="_on_interaction_timer_on_time_timeout"]
